cambio de tabla

--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
           </thead>
           <tbody>
             <tr>
-              <td>Piernas</td>
-              <td>Torso</td>
+              <td>FullBody</td>
               <td>Descanso</td>
-              <td>Piernas</td>
-              <td>Torso</td>
+              <td>FullBody</td>
+              <td>Descanso</td>
+              <td>FullBody</td>
               <td>Descanso</td>
               <td>Descanso</td>
             </tr>
