cambio de titulo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </ul>
         <form>
           <label for="email-reg">Email:</label>
-          <input type="email" id="email-reg" placeholder="Email" />
+          <input type="email" id="email-reg" />
           <label for="password">Contraseña:</label>
           <input type="password" id="password" />
           <br />
@@ -33,7 +33,7 @@
           <br />
           <br />
           <label for="email-log">Email:</label>
-          <input type="email" id="email-log" placeholder="Email" />
+          <input type="email" id="email-log" />
           <label for="password">Contraseña:</label>
           <input type="password" id="password" />
           <input type="submit" value="Iniciar" />
