--- a/index.html
+++ b/index.html
@@ -42,7 +42,10 @@
     </header>
     <main>
       <section>
-        <img src="./assets/foto-valen.jpg" alt="Foto de Valentin Barsanti" />
+        <img
+          src="./assets/img/foto-valen.jpg"
+          alt="Foto de Valentin Barsanti"
+        />
       </section>
 
       <section>
