--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       <h1>Página de Valentin Gabriel Barsanti</h1>
       <nav>
         <ul>
-          <li><a href="#">Inicio</a></li>
+          <li><a href="./index.html">Inicio</a></li>
           <li><a href="#">Galeria</a></li>
-          <li><a href="#">Trabajos</a></li>
+          <li><a href="./trabajos.html">Trabajos</a></li>
         </ul>
         <form>
           <label for="email-reg">Email:</label>
