--- a/trabajos.html
+++ b/trabajos.html
@@ -8,6 +8,13 @@
   <body>
     <header>
       <h1>Trabajos</h1>
+      <nav>
+        <ul>
+          <li><a href="./index.html">Inicio</a></li>
+          <li><a href="#">Galeria</a></li>
+          <li><a href="./trabajos.html">Trabajos</a></li>
+        </ul>
+      </nav>
     </header>
     <main>
       <h2>Enlace a Trabajos</h2>
