--- a/galeria.html
+++ b/galeria.html
@@ -17,16 +17,7 @@
       </nav>
     </header>
     <main>
-      <h2>Enlace a Trabajos</h2>
-      <a href="./formulario.html" target="_blank">Formulario</a>
-      <br />
-      <a href="./prog-web-fs.html" target="_blank"
-        >Programación Web Full Stack</a
-      >
-      <br />
-      <a href="./curriculum-messi.html" target="_blank"
-        >Curriculum Vitae de Lionel Messi</a
-      >
+      <h2>Galeria vacia no hay nada wachin</h2>
     </main>
     <footer>
       <div>
