--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <nav>
         <ul>
           <li><a href="./index.html">Inicio</a></li>
-          <li><a href="#">Galeria</a></li>
+          <li><a href="./galeria.html">Galeria</a></li>
           <li><a href="./trabajos.html">Trabajos</a></li>
         </ul>
         <form>
