--- a/galeria.html
+++ b/galeria.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Trabajos</title>
+    <title>Galeria</title>
   </head>
   <body>
     <header>
-      <h1>Trabajos</h1>
+      <h1>Galeria</h1>
       <nav>
         <ul>
           <li><a href="./index.html">Inicio</a></li>
@@ -17,7 +17,7 @@
       </nav>
     </header>
     <main>
-      <h2>Galeria vacia no hay nada wachin</h2>
+      <h2>Vacia no hay nada wachin</h2>
     </main>
     <footer>
       <div>
